@@ -58,6 +58,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Fix packet timestamping.
       Fix packet filtering with low snaplen.
       Improve connection status reporting.
+      Add support for promiscuous mode.
     Windows:
       Fix internal handling of "not supported" error codes from NPF.
       Work around a bug in Npcap 1.00 in case of driver version mismatch.
